Primera Versión del MAIL_CRAWLER.
Versión completa con todo el código disponible. No está funcional todavía.

Empieza la labor de corregir errores.